--- a/.github/workflows/otomasyon.yml
+++ b/.github/workflows/otomasyon.yml
@@ -29,6 +29,10 @@ jobs:
           pip install -r requirements.txt
 
       - name: Robotu Çalıştır
+        env: # EKSİK OLAN VE EKLENEN KISIM BURASI 👇
+          USER_EMAIL: ${{ secrets.USER_EMAIL }}
+          USER_PASS: ${{ secrets.USER_PASS }}
+          FIRM_CODE: ${{ secrets.FIRM_CODE }}
         run: |
           python -m pytest tests/test_stok_ekle.py --alluredir=allure-results
 
